--- a/src/Components/Shared/UserMenu/UserMenu.module.scss
+++ b/src/Components/Shared/UserMenu/UserMenu.module.scss
@@ -68,5 +68,5 @@
 
 // Arabic styles
 [lang=ar] .userMenu {
-  direction: rtl;
+  left: 0;
 }
